# wine_review_model

./: README.md
wine_libraries/: README.md  pyproject.toml
wine_libraries/functions/: featurization.py  model_wrapper.py  shap.py  shap_calc.py  similar_wines.py
wine_libraries/notebooks/: featurization.ipynb  gbm.ipynb  gbm_shap.ipynb  rfm.ipynb
wine_libraries/price_model/: README.md
wine_libraries/price_model/notebooks/: gbm_create_shap_20deep.ipynb  gbm_shap_plots.ipynb  rfm-2000.ipynb
wine_libraries/wine_recommender/: README.md  read_me_winerecommender.md
wine_libraries/wine_recommender/functions/: similar_wines.py
wine_libraries/wine_recommender/notebooks/: create_description_embeddings.ipynb  find_most_similar_wines.ipynb  fine_tune_similarity.ipynb  similarity_fine_tuning_price_importance.ipynb
