[tool.poetry]
name = "wine-libraries"
version = "0.1.0"
description = ""
authors = ["will_tong2001@yahoo.com <will_tong2001@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
shap = "^0.46.0"
nltk = "^3.8.1"
sentence-transformers = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
